# live-subtitle-by-whisper-cpp

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  RELEASE_NOTES.md
src/: main.cpp
web/: index.html
